--- a/docker-python/docker-compose.yml
+++ b/docker-python/docker-compose.yml
@@ -70,68 +70,68 @@ services:
 
     
   #delivery-service block
-  delivery-app:
+  # delivery-app:
   
-    build: ${DELIVERY_SERVICE_PATH}/Docker/app/.
+  #   build: ${DELIVERY_SERVICE_PATH}/Docker/app/.
   
-    container_name: ${DELIVERY_SERVICE_NAME}
+  #   container_name: ${DELIVERY_SERVICE_NAME}
   
-    env_file:
-      - ${DELIVERY_SERVICE_PATH}/Docker/app/.env
-      - .env
+  #   env_file:
+  #     - ${DELIVERY_SERVICE_PATH}/Docker/app/.env
+  #     - .env
     
-    environment:
-      - SQL_ALCHEMY_HOST=${DELIVERY_MYSQL_NAME}
-      - SQL_ALCHEMY_DATABASE=${DELIVERY_MYSQL_DATABASE}
-      - REDIS_HOST=${DELIVERY_REDIS_HOST}
-      - FIRESTORE_EMULATOR_HOST=${DELIVERY_FIRESTORE_NAME}:8080
-      - FIRESTORE_PROJECT_ID=${DELIVERY_FIRESTORE_NAME}
+  #   environment:
+  #     - SQL_ALCHEMY_HOST=${DELIVERY_MYSQL_NAME}
+  #     - SQL_ALCHEMY_DATABASE=${DELIVERY_MYSQL_DATABASE}
+  #     - REDIS_HOST=${DELIVERY_REDIS_HOST}
+  #     - FIRESTORE_EMULATOR_HOST=${DELIVERY_FIRESTORE_NAME}:8080
+  #     - FIRESTORE_PROJECT_ID=${DELIVERY_FIRESTORE_NAME}
 
-    command: ["gunicorn", "-b", "0.0.0.0:8000", "src.main:app", "--reload", "-t 60"]
+  #   command: ["gunicorn", "-b", "0.0.0.0:8000", "src.main:app", "--reload", "-t 60"]
   
-    volumes:
-      - ${DELIVERY_SERVICE_PATH}/src:/app/src
-      - ${DELIVERY_SERVICE_PATH}/tests:/app/tests
-      - ${DELIVERY_SERVICE_PATH}/Docker/database/firestore-account:/app/firestore-account
+  #   volumes:
+  #     - ${DELIVERY_SERVICE_PATH}/src:/app/src
+  #     - ${DELIVERY_SERVICE_PATH}/tests:/app/tests
+  #     - ${DELIVERY_SERVICE_PATH}/Docker/database/firestore-account:/app/firestore-account
       
-    ports:
-      - ${DELIVERY_APP_PORT}:8000
+  #   ports:
+  #     - ${DELIVERY_APP_PORT}:8000
     
-    depends_on:
-      - delivery-mysql
-      - delivery-redis
-      - delivery-firestore
+  #   depends_on:
+  #     - delivery-mysql
+  #     - delivery-redis
+  #     - delivery-firestore
   
-  delivery-mysql:
+  # delivery-mysql:
   
-    build: ${DELIVERY_SERVICE_PATH}/Docker/database/.
+  #   build: ${DELIVERY_SERVICE_PATH}/Docker/database/.
   
-    restart: always
+  #   restart: always
   
-    container_name: ${DELIVERY_MYSQL_NAME}
+  #   container_name: ${DELIVERY_MYSQL_NAME}
   
-    environment:
-      - MYSQL_ROOT_PASSWORD=root
-      - MYSQL_DATABASE=${DELIVERY_MYSQL_DATABASE}
+  #   environment:
+  #     - MYSQL_ROOT_PASSWORD=root
+  #     - MYSQL_DATABASE=${DELIVERY_MYSQL_DATABASE}
 
-    ports:
-      - ${DELIVERY_MYSQL_PORT}:3306
+  #   ports:
+  #     - ${DELIVERY_MYSQL_PORT}:3306
   
-    command: 
-      - --default-authentication-plugin=mysql_native_password
+  #   command: 
+  #     - --default-authentication-plugin=mysql_native_password
 
-  delivery-redis:
+  # delivery-redis:
   
-    container_name: ${DELIVERY_REDIS_HOST}
+  #   container_name: ${DELIVERY_REDIS_HOST}
 
-    image: redis:alpine
+  #   image: redis:alpine
   
-  delivery-firestore:
+  # delivery-firestore:
 
-    container_name: ${DELIVERY_FIRESTORE_NAME}
+  #   container_name: ${DELIVERY_FIRESTORE_NAME}
 
-    image: mtlynch/firestore-emulator
+  #   image: mtlynch/firestore-emulator
 
-    environment:
-      FIRESTORE_PROJECT_ID: ${DELIVERY_FIRESTORE_NAME}
+  #   environment:
+  #     FIRESTORE_PROJECT_ID: ${DELIVERY_FIRESTORE_NAME}
   
