--- a/docker-nodejs/delivery-service/Docker/app/Dockerfile
+++ b/docker-nodejs/delivery-service/Docker/app/Dockerfile
@@ -1,10 +1,16 @@
-FROM node:14
+# Use the official Python image.
+# https://hub.docker.com/_/python
+FROM python:3.7-slim
 
-WORKDIR /app
+ENV APP_HOME /app
 
-COPY package.json .
-RUN npm install
+WORKDIR $APP_HOME
 
+# Copy files into the container image.
 COPY . .
 
-CMD ["npm", "run", "dev"]
+# Install dependencies.
+RUN pip install -r requirements.txt
+
+# Run the web service on container startup.
+EXPOSE 8080
