--- a/docker-nodejs/docker-compose.yml
+++ b/docker-nodejs/docker-compose.yml
@@ -13,13 +13,13 @@ services:
       - .env
     
     environment:
-      - SQL_ALCHEMY_HOST=${ECOMMERCE_MYSQL_NAME}
-      - SQL_ALCHEMY_DATABASE=${ECOMMERCE_MYSQL_DATABASE}
+      - SEQUELIZE_HOST=${ECOMMERCE_MYSQL_NAME}
+      - SEQUELIZE_DATABASE=${ECOMMERCE_MYSQL_DATABASE}
       - REDIS_HOST=${ECOMMERCE_REDIS_HOST}
       - FIRESTORE_EMULATOR_HOST=${ECOMMERCE_FIRESTORE_NAME}:8080
       - FIRESTORE_PROJECT_ID=${ECOMMERCE_FIRESTORE_NAME}
 
-    command: ["gunicorn", "-b", "0.0.0.0:8000", "src.main:app", "--reload", "-t 60"]
+    command: ["npm", "run", "dev"]
   
     volumes:
       - ${ECOMMERCE_SERVICE_PATH}/src:/app/src
@@ -27,7 +27,7 @@ services:
       - ${ECOMMERCE_SERVICE_PATH}/Docker/database/firestore-account:/app/firestore-account
       
     ports:
-      - ${ECOMMERCE_APP_PORT}:8000
+      - ${ECOMMERCE_APP_PORT}:8080
     
     depends_on:
       - ecommerce-mysql
@@ -66,8 +66,6 @@ services:
 
     environment:
       FIRESTORE_PROJECT_ID: ${ECOMMERCE_FIRESTORE_NAME}
-  
-
     
   #delivery-service block
   delivery-app:
@@ -81,13 +79,13 @@ services:
       - .env
     
     environment:
-      - SQL_ALCHEMY_HOST=${DELIVERY_MYSQL_NAME}
-      - SQL_ALCHEMY_DATABASE=${DELIVERY_MYSQL_DATABASE}
+      - SEQUELIZE_HOST=${DELIVERY_MYSQL_NAME}
+      - SEQUELIZE_DATABASE=${DELIVERY_MYSQL_DATABASE}
       - REDIS_HOST=${DELIVERY_REDIS_HOST}
       - FIRESTORE_EMULATOR_HOST=${DELIVERY_FIRESTORE_NAME}:8080
       - FIRESTORE_PROJECT_ID=${DELIVERY_FIRESTORE_NAME}
 
-    command: ["gunicorn", "-b", "0.0.0.0:8000", "src.main:app", "--reload", "-t 60"]
+    command: ["npm", "run", "dev"]
   
     volumes:
       - ${DELIVERY_SERVICE_PATH}/src:/app/src
@@ -95,7 +93,7 @@ services:
       - ${DELIVERY_SERVICE_PATH}/Docker/database/firestore-account:/app/firestore-account
       
     ports:
-      - ${DELIVERY_APP_PORT}:8000
+      - ${DELIVERY_APP_PORT}:8080
     
     depends_on:
       - delivery-mysql
